--- a/frontend/src/pages/Chat/ChatPage.module.css
+++ b/frontend/src/pages/Chat/ChatPage.module.css
@@ -3,15 +3,15 @@
 }
 
 .header {
-    @apply bg-white p-4 flex items-center border-b border-gray-200 sticky top-0 z-10;
+    @apply bg-white py-7 px-7 flex items-center border-b border-gray-200 sticky top-0 z-10 relative;
 }
 
 .backButton {
-    @apply p-2 rounded-full hover:bg-gray-100 text-gray-700;
+    @apply p-2 rounded-full hover:bg-gray-100 text-gray-700 absolute left-4;
 }
 
 .storeName {
-    @apply text-lg font-medium text-gray-800 m-auto text-center truncate;
+    @apply text-lg font-medium text-gray-800 w-full text-center truncate;
 }
 
 .messageContainer {
